mType/tests/testFiles/import/pass/modules/RedundantModule.mt
class RedundantClass {
    public function test(): string {
        return "Redundant import";
    }
}
