mType/tests/testFiles/import/error/modules/TrailingCommaModule.mt
class TrailingCommaClass {
    fun test(): String {
        return "Trailing comma test";
    }
}
